tests/scripts/errors/runtime/add_num_to_null.cdo
VAR x = 1 + NULL;
print(x);
